# hybrid-tools

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: HybridDynamicalSystem.md
scripts/: bouncing_ball_2d_hybrid_system.py  bouncing_ball_hybrid_system.py  simple_hybrid_system.py
scripts/skf/: skf_bouncing_ball_2d_hybrid_system.py  skf_bouncing_ball_hybrid_system.py  skf_simple_hybrid_system.py
scripts/trajectory_optimizaiton/: shooting_bouncing_ball_2d_hybrid_system.py  shooting_bouncing_ball_2d_velocity_sweep.py
src/: hybrid_helper_functions.py  hybrid_simulator.py  skf.py
src/hybrid_tools/: __init__.py  hybrid_helper_functions.py  hybrid_simulator.py  shooting_method_optimizer.py  skf.py  types.py
src/hybrid_tools/basic_hybrid_systems/: __init__.py  bouncing_ball.py  bouncing_ball_2d.py  simple_system.py
