[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybrid-tools"
version = "0.1.0"
description = "Salted Kalman Filter for hybrid dynamical systems state estimation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nathan J. Kong"}
]
keywords = ["hybrid systems", "kalman filter", "state estimation", "robotics", "control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "sympy>=1.9",
    "matplotlib>=3.3.0",
    "graphviz>=0.20.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/robomechanics/hybrid-tools"
Repository = "https://github.com/robomechanics/hybrid-tools.git"
Documentation = "https://github.com/robomechanics/hybrid-tools/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/hybrid_tools"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long - let formatter handle this, ignore in comments/docstrings
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
